--- a/person.html
+++ b/person.html
@@ -211,7 +211,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <!-- <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div> -->
                   </div>
                   <div class="group-item">
@@ -220,7 +220,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -229,7 +229,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -238,7 +238,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -247,7 +247,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -256,7 +256,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -271,7 +271,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -280,7 +280,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -289,7 +289,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -298,7 +298,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -307,7 +307,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -316,7 +316,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -325,7 +325,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -334,7 +334,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -349,7 +349,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -358,7 +358,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -367,7 +367,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -376,7 +376,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -391,7 +391,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -400,7 +400,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -409,7 +409,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -418,7 +418,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -427,7 +427,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -442,7 +442,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -451,7 +451,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -460,7 +460,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -475,7 +475,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -484,7 +484,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -493,7 +493,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -502,7 +502,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -517,7 +517,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -526,7 +526,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -541,7 +541,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -550,7 +550,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -565,7 +565,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -574,7 +574,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -583,7 +583,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -592,7 +592,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
@@ -607,7 +607,7 @@
                       <span class="hover-example">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-example">הוסף</span>
+                      <span class="hover-example">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -616,7 +616,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -625,7 +625,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -634,7 +634,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -643,7 +643,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -652,7 +652,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -661,7 +661,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                   <div class="group-item">
@@ -670,7 +670,7 @@
                       <span class="hover-text">הצג</span>
                     </div>
                     <div class="show-box">
-                      <span class="hover-text">הוסף</span>
+                      <span class="hover-text">צור</span>
                     </div>
                   </div>
                 </div>
