--- a/person.html
+++ b/person.html
@@ -353,7 +353,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הצעה</div>
+                    <div class="group-item-topic">הצעות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -362,7 +362,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הזמנה</div>
+                    <div class="group-item-topic">הזמנות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -371,7 +371,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קמפיין</div>
+                    <div class="group-item-topic">קמפיינים</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -395,7 +395,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">עסקה</div>
+                    <div class="group-item-topic">עסקאות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -413,7 +413,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">מס קבלה</div>
+                    <div class="group-item-topic">מס קבלות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -422,7 +422,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קבלה</div>
+                    <div class="group-item-topic">קבלות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -437,7 +437,7 @@
               <div class="group green">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">חשבונית מס זיכוי</div>
+                    <div class="group-item-topic">חשבוניות מס זיכויים</div>
                     <div class="show-box">
                       <span class="hover-example">הצג</span>
                     </div>
@@ -446,7 +446,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">חשבונית עסקה זיכוי</div>
+                    <div class="group-item-topic">חשבוניות עסקה זיכויים</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -455,7 +455,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קבלה זיכוי</div>
+                    <div class="group-item-topic">קבלות זיכויים</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -488,7 +488,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הפקדת בנק</div>
+                    <div class="group-item-topic">הפקדות בנק</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -497,7 +497,7 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קבלה</div>
+                    <div class="group-item-topic">קבלות</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
@@ -512,7 +512,7 @@
               <div class="group blue">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">ליד</div>
+                    <div class="group-item-topic">לידים</div>
                     <div class="show-box">
                       <span class="hover-example">הצג</span>
                     </div>
@@ -521,7 +521,25 @@
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">איש</div>
+                    <div class="group-item-topic">אנשים</div>
+                    <div class="show-box">
+                      <span class="hover-text">הצג</span>
+                    </div>
+                    <div class="show-box">
+                      <span class="hover-text">צור</span>
+                    </div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">ארגונים</div>
+                    <div class="show-box">
+                      <span class="hover-text">הצג</span>
+                    </div>
+                    <div class="show-box">
+                      <span class="hover-text">צור</span>
+                    </div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">משאבים</div>
                     <div class="show-box">
                       <span class="hover-text">הצג</span>
                     </div>
