--- a/person.html
+++ b/person.html
@@ -42,13 +42,18 @@
               </div>
               <div class="menu active">
                 <div class="menu-item">
+                  <div class="round-img-container">
+                    <img src="./up/imgs/passport.webp" alt="" />
+                  </div>
+                  <span>רוני שרון</span>
+                </div>
+                <div class="menu-item">
                   <span class="material-symbols-outlined"> settings </span>
-                  <b>הגדרות:</b>
-                  <span>שלי</span>
+                  <span>הגדרות שלי</span>
                   <span class="material-symbols-outlined stop-icon">
                     stop
                   </span>
-                  <span>ניהול המערכת</span>
+                  <span>הגדרות מערכות</span>
                 </div>
                 <div class="menu-item">
                   <!-- <span class="material-symbols-outlined"> dark_mode </span> -->
@@ -73,6 +78,10 @@
                 <div class="menu-item">
                   <span class="material-symbols-outlined"> question_mark </span>
                   <span>הדרכה על המערכת</span>
+                </div>
+                <div class="menu-item">
+                  <span class="material-symbols-outlined"> tab_move </span>
+                  <span>יציאה מהמערכת</span>
                 </div>
               </div>
             </div>
