--- a/person.html
+++ b/person.html
@@ -152,21 +152,7 @@
           </div>
         </div>
 
-        <!-- <div class="navbar__personal">
-          <span
-            class="material-symbols-outlined fill-icon color-change"
-            style="cursor: pointer"
-            >circle</span
-          >
-          <div class="darkmode-toggle">
-            <button aria-label="darkmode-toggle" id="darkmodeToggle">
-              <span class="material-symbols-outlined"> dark_mode </span>
-            </button>
-          </div>
-          <div class="round-img-container">
-            <img src="./up/imgs/passport.webp" alt="" />
-          </div>
-        </div> -->
+        <div class="navbar__small-screen--append"></div>
 
         <div class="navbar-bottom create-show active">
           <div class="create-container">
