--- a/person.html
+++ b/person.html
@@ -160,35 +160,35 @@
               </div>
 
               <div class="create-category" data-color="blue">
-                <span>כרטיס</span>
+                <span>כרטיסים</span>
               </div>
 
               <div class="create-category" data-color="send">
-                <span>שלח</span>
+                <span>הודעות</span>
               </div>
 
               <div class="create-category" data-color="yellow">
-                <span>לטיפול</span>
-              </div>
-
-              <div class="create-category" data-color="purple">
-                <span>תיעוד</span>
+                <span>פעולות לביצוע</span>
               </div>
 
               <div class="create-category" data-color="pre-sales">
                 <span>קדם מכירות</span>
               </div>
 
+              <div class="create-category" data-color="purple">
+                <span>קורסים</span>
+              </div>
+
               <div class="create-category" data-color="invoice">
-                <span>חשבונית/קבלה</span>
+                <span>חשבוניות / קבלות</span>
               </div>
 
               <div class="create-category" data-color="credit">
-                <span>זיכוי</span>
+                <span>מסמכי זיכוי</span>
               </div>
 
               <div class="create-category" data-color="instruction">
-                <span>הוראות</span>
+                <span>הוראות תשלום</span>
               </div>
 
               <div class="create-category" data-color="red">
@@ -200,30 +200,25 @@
                 <div class="group-fields">
                   <div class="group-item">
                     <div class="group-item-topic">
-                      <span>דף הבית</span>
-                      <span
-                        class="material-symbols-outlined edit-group-item-topic btn-default"
-                        title="עריכה"
-                        >edit</span
-                      >
+                      <span>ליד</span>
                     </div>
                   </div>
                   <div class="group-item">
                     <div class="group-item-topic">
-                      <span>אנשים</span>
+                      <span>איש</span>
                     </div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">ארגונים</div>
+                    <div class="group-item-topic">ארגון</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">המשימות שלי</div>
+                    <div class="group-item-topic">משימה לביצוע</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">מיילים שלי</div>
+                    <div class="group-item-topic">הצעת מחיר</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קריאות</div>
+                    <div class="group-item-topic">מסמכי מכירה</div>
                   </div>
                 </div>
               </div>
@@ -232,28 +227,13 @@
               <div class="group purple">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">דיווח שעות עצמי</div>
+                    <div class="group-item-topic">קורס</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קריאות</div>
+                    <div class="group-item-topic">קורס אב</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">משימות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">הערות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">שיחות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">פגישות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">דיווח שעות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">קבצים</div>
+                    <div class="group-item-topic">מפגש קורס</div>
                   </div>
                 </div>
               </div>
@@ -265,13 +245,13 @@
                     <div class="group-item-topic">הזדמנות</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הצעות</div>
+                    <div class="group-item-topic">הצעת מחיר</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הזמנות</div>
+                    <div class="group-item-topic">הזמנה</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קמפיינים</div>
+                    <div class="group-item-topic">קמפיין</div>
                   </div>
                 </div>
               </div>
@@ -280,19 +260,16 @@
               <div class="group green">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">דיווח שעות עצמי</div>
+                    <div class="group-item-topic">חשבונית מס</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">עסקאות</div>
+                    <div class="group-item-topic">חשבונית עסקה</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">מס</div>
+                    <div class="group-item-topic">חשבונית מס/קבלה</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">מס קבלות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">קבלות</div>
+                    <div class="group-item-topic">קבלה</div>
                   </div>
                 </div>
               </div>
@@ -301,13 +278,13 @@
               <div class="group green">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">חשבוניות מס זיכויים</div>
+                    <div class="group-item-topic">חשבונית מס זיכוי</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">חשבוניות עסקה זיכויים</div>
+                    <div class="group-item-topic">חשבונית עסקה זיכוי</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קבלות זיכויים</div>
+                    <div class="group-item-topic">זיכוי</div>
                   </div>
                 </div>
               </div>
@@ -316,16 +293,13 @@
               <div class="group green">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">הוראת זיכוי</div>
-                  </div>
-                  <div class="group-item">
                     <div class="group-item-topic">הוראת חיוב</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הפקדות בנק</div>
+                    <div class="group-item-topic">הפקדה</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קבלות</div>
+                    <div class="group-item-topic">הוראת זיכוי</div>
                   </div>
                 </div>
               </div>
@@ -334,16 +308,16 @@
               <div class="group blue">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">לידים</div>
+                    <div class="group-item-topic">ליד</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">אנשים</div>
+                    <div class="group-item-topic">איש</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">ארגונים</div>
+                    <div class="group-item-topic">ארגון</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">משאבים</div>
+                    <div class="group-item-topic">משאב</div>
                   </div>
                 </div>
               </div>
@@ -352,10 +326,10 @@
               <div class="group blue">
                 <div class="group-fields">
                   <div class="group-item">
-                    <div class="group-item-topic">מיילים</div>
+                    <div class="group-item-topic">מייל</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">הודעות</div>
+                    <div class="group-item-topic">הודעה</div>
                   </div>
                 </div>
               </div>
@@ -382,28 +356,22 @@
               <div class="group purple">
                 <div class="group-fields">
                   <div class="group-item">
+                    <div class="group-item-topic">משימה</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">שיחה</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הערה</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">פגישה</div>
+                  </div>
+                  <div class="group-item">
                     <div class="group-item-topic">דיווח שעות עצמי</div>
                   </div>
                   <div class="group-item">
-                    <div class="group-item-topic">קריאות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">משימות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">הערות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">שיחות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">פגישות</div>
-                  </div>
-                  <div class="group-item">
                     <div class="group-item-topic">דיווח שעות</div>
-                  </div>
-                  <div class="group-item">
-                    <div class="group-item-topic">קבצים</div>
                   </div>
                 </div>
               </div>
