--- a/person.html
+++ b/person.html
@@ -378,6 +378,265 @@
             </div>
           </div>
         </div>
+
+        <div class="navbar-bottom search-menu active">
+          <div class="create-container">
+            <div class="icons-container-create">
+              <div
+                class="create-category focus-category"
+                data-color="search-fav"
+              >
+                <span>מועדפים</span>
+              </div>
+
+              <div class="create-category" data-color="search-cards">
+                <span>כרטיסים</span>
+              </div>
+
+              <div class="create-category" data-color="search-msgs">
+                <span>הודעות</span>
+              </div>
+
+              <div class="create-category" data-color="search-todo">
+                <span>פעולות לביצוע</span>
+              </div>
+
+              <div class="create-category" data-color="search-presales">
+                <span>קדם מכירות</span>
+              </div>
+
+              <div class="create-category" data-color="search-courses">
+                <span>קורסים</span>
+              </div>
+
+              <div class="create-category" data-color="search-invoice">
+                <span>חשבוניות / קבלות</span>
+              </div>
+
+              <div class="create-category" data-color="search-credit">
+                <span>מסמכי זיכוי</span>
+              </div>
+
+              <div class="create-category" data-color="search-instruction">
+                <span>הוראות תשלום</span>
+              </div>
+
+              <div class="create-category" data-color="search-logistics">
+                <span>לוגיסטיקה</span>
+              </div>
+            </div>
+            <div class="group-container-create" data-color="search-fav">
+              <div class="group-blue">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">
+                      <span>כרטסות</span>
+                    </div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">
+                      <span>פעולות</span>
+                    </div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">מסמכי מכירה</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group-container-create active"
+              data-color="search-cards"
+            >
+              <div class="group purple">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">הכל</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">לידים</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">אנשים</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">ארגונים</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">משאבים</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="group-container-create active" data-color="search-msgs">
+              <div class="group green">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">מיילים</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הודעות</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="group-container-create active" data-color="search-todo">
+              <div class="group green">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">
+                      הכל (פתוחות, בביצוע, סגורות)
+                    </div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">משימות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">שיחות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הערות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">פגישות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">דיווחי שעות</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group-container-create active"
+              data-color="search-presales"
+            >
+              <div class="group green">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">הכל</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הזדמנויות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הצעות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הזמנות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">קמפיינים</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group-container-create active"
+              data-color="search-courses"
+            >
+              <div class="group green">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">קורסים</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">מפגשי קורסים</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">קורסי אב</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group-container-create active"
+              data-color="search-invoice"
+            >
+              <div class="group blue">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">הכל</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">חשבוניות מס</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">חשבונית עסקה</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">חשבוניות מס/קבלה</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">קבלות</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group-container-create active"
+              data-color="search-credit"
+            >
+              <div class="group blue">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">הכל</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">חשבוניות מס זיכוי</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">חשבוניות עסקה זיכוי</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">קבלות זיכויים</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group-container-create active"
+              data-color="search-instruction"
+            >
+              <div class="group">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">הוראות חיוב</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הפקדות</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">הוראות זיכוי</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div
+              class="group-container-create active"
+              data-color="search-logistics"
+            >
+              <div class="group purple">
+                <div class="group-fields">
+                  <div class="group-item">
+                    <div class="group-item-topic">הכל</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">תעודות משלוח</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">תעודות החזרה</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">כניסה למלאי</div>
+                  </div>
+                  <div class="group-item">
+                    <div class="group-item-topic">יציאה מהמלאי</div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
